--- a/series/index.html
+++ b/series/index.html
@@ -10,16 +10,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   
-  <title>Tags &middot; Blowfish</title>
-  <meta name="title" content="Tags &middot; Blowfish" />
+  <title>Series &middot; Blowfish</title>
+  <meta name="title" content="Series &middot; Blowfish" />
   
   <meta name="description" content="My awesome website" />
   
   
   
-  <link rel="canonical" href="https://TheNaciaaStrike.github.io/tags/" />
+  <link rel="canonical" href="https://TheNaciaaStrike.github.io/series/" />
   
-  <link rel="alternate" type="application/rss+xml" href="/tags/index.xml" title="Blowfish" />
+  <link rel="alternate" type="application/rss+xml" href="/series/index.xml" title="Blowfish" />
   
   
   
@@ -68,13 +68,13 @@
   
   
   
-  <meta property="og:title" content="Tags" />
+  <meta property="og:title" content="Series" />
 <meta property="og:description" content="My awesome website" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://TheNaciaaStrike.github.io/tags/" /><meta property="og:site_name" content="Blowfish" />
+<meta property="og:url" content="https://TheNaciaaStrike.github.io/series/" /><meta property="og:site_name" content="Blowfish" />
 
   <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Tags"/>
+<meta name="twitter:title" content="Series"/>
 <meta name="twitter:description" content="My awesome website"/>
 
   
@@ -367,7 +367,7 @@
 
   <header>
     
-    <h1 class="mt-5 text-4xl font-extrabold text-neutral-900 dark:text-neutral">Tags</h1>
+    <h1 class="mt-5 text-4xl font-extrabold text-neutral-900 dark:text-neutral">Series</h1>
     <div class="mt-1 mb-2 text-base text-neutral-500 dark:text-neutral-400 print:hidden">
       
 
@@ -401,8 +401,8 @@
   </header>
   
   <script>
-    var oid = "views_taxonomy_tags"
-    var oid_likes = "likes_taxonomy_tags"
+    var oid = "views_taxonomy_series"
+    var oid_likes = "likes_taxonomy_series"
   </script>
   
   
