Added bluesky links to live

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" class="scroll-smooth" data-default-appearance="light"
-  data-auto-appearance="true"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  data-auto-appearance="true"><head>
   <meta charset="utf-8" />
   
   <meta http-equiv="content-language" content="en" />
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="http://localhost:1313/projects/" />
+  <link rel="canonical" href="https://TheNaciaaStrike.github.io/projects/" />
   
   <link rel="alternate" type="application/rss+xml" href="/projects/index.xml" title="Blowfish" />
   
@@ -69,7 +69,7 @@
   <meta property="og:title" content="Personal Projects" />
 <meta property="og:description" content="My oither projects." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:1313/projects/" />
+<meta property="og:url" content="https://TheNaciaaStrike.github.io/projects/" />
 
 
   <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Personal Projects"/>
@@ -82,6 +82,9 @@
   
   <meta name="author" content="TheNaciaaStrike" />
   
+  
+  
+  <link href="https://bsky.app/profile/thenaciaastrike" rel="me" />
   
   
   <link href="https://discord.gg/8f9BqsU3VN" rel="me" />
@@ -679,7 +682,7 @@
 <div
   id="search-wrapper"
   class="invisible fixed inset-0 flex h-screen w-screen cursor-default flex-col bg-neutral-500/50 p-4 backdrop-blur-sm dark:bg-neutral-900/50 sm:p-6 md:p-[10vh] lg:p-[12vh]"
-  data-url="http://localhost:1313/"
+  data-url="https://TheNaciaaStrike.github.io/"
   style="z-index:500"
 >
   <div
